--- a/assignment01.html
+++ b/assignment01.html
@@ -10,13 +10,13 @@
     title,      √
     headers (at least 3 from h1-h6),      √
     paragraphs (p),                       √
-    lists (ol, ul, dl), 
-    line breaks (br), 
+    lists (ol, ul, dl),                   √
+    line breaks (br),                     √
     anchor (a, a link to another page),   √
     relative path,                        √
-    absolute path, 
+    absolute path,                        √
     fragment identifier, 
-    image,      √
+    image,                                √
     video, 
     width, 
     height, 
@@ -46,11 +46,13 @@
   </head>
   <body>
     <h1>Dogesplorer</h1>
-    <h2>Dogecoin Address Explorer</h2>
+    <!-- <h2>Dogecoin Address Explorer</h2> -->
+    <h2id="stocks">Dogecoin Address Explorer</h2id>
+    <br>
     <!--This is a comment!-->
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcThSTQoc3lNEA
-    PGnErDlKqQhQl8YRoG2ueX1g&usqp=CAU">
-    <img src="img001.jpg" alt="Another photo of the great Howard Hughes!">
+    PGnErDlKqQhQl8YRoG2ueX1g&usqp=CAU" alt="Photo of the great Howard Hughes!">
+    <img src="./img001.jpg" alt="Another photo of the great Howard Hughes!">
     <h3>Learn to invest like Howard Hughes!</h3>
     <p>Dogesplorer is the #1 site in the World for exploring the Doge blockchain! 
       <br>Just enter a wallet address, a transaction hash, or a 
