--- a/assignment01.html
+++ b/assignment01.html
@@ -46,14 +46,16 @@
   </head>
   <body>
     <h1>Dogesplorer</h1>
-    <!-- <h2>Dogecoin Address Explorer</h2> -->
-    <h2id="stocks">Dogecoin Address Explorer</h2id>
+    <h2>Dogecoin Address Explorer</h2>
+    <!-- <h2id="descr">Dogecoin Address Explorer</h2id> -->
     <br>
     <!--This is a comment!-->
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcThSTQoc3lNEA
     PGnErDlKqQhQl8YRoG2ueX1g&usqp=CAU" alt="Photo of the great Howard Hughes!">
     <img src="./img001.jpg" alt="Another photo of the great Howard Hughes!">
     <h3>Learn to invest like Howard Hughes!</h3>
+    <p>click<a href="#descr_list"> here </a>to skip directly to description list using a fragment identifier</p>
+    <!-- <a href="#descr_list">click here to skip ahead</a> -->
     <p>Dogesplorer is the #1 site in the World for exploring the Doge blockchain! 
       <br>Just enter a wallet address, a transaction hash, or a 
       block address to see the details!</p>
@@ -80,7 +82,7 @@
       <li>block02</li>
     </ul>
 
-    <h2> Data Definition List or Description List</h2>
+    <h2 id="descr_list">Data Definition List or Description List</h2>
     <dl>
       <dt>Dogecoin</dt>
       <dd>The very finest and most decentralized cryptocurrency of them all</dd>
