--- a/assignment01.html
+++ b/assignment01.html
@@ -15,12 +15,12 @@
     anchor (a, a link to another page),   √
     relative path,                        √
     absolute path,                        √
-    fragment identifier, 
+    fragment identifier,                  √
     image,                                √
     video, 
     width, 
     height, 
-    alt, 
+    alt,                                  √
     table, 
     row, 
     data cell, 
@@ -49,11 +49,12 @@
     <h2>Dogecoin Address Explorer</h2>
     <!-- <h2id="descr">Dogecoin Address Explorer</h2id> -->
     <br>
-    <!--This is a comment!-->
+    <!--img with relative and absolute paths-->
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcThSTQoc3lNEA
     PGnErDlKqQhQl8YRoG2ueX1g&usqp=CAU" alt="Photo of the great Howard Hughes!">
     <img src="./img001.jpg" alt="Another photo of the great Howard Hughes!">
     <h3>Learn to invest like Howard Hughes!</h3>
+
     <p>click<a href="#descr_list"> here </a>to skip directly to description list using a fragment identifier</p>
     <!-- <a href="#descr_list">click here to skip ahead</a> -->
     <p>Dogesplorer is the #1 site in the World for exploring the Doge blockchain! 
@@ -97,5 +98,3 @@
 
   </body>
 </html>
-
-<!-- NEW CODE COMMIT -->
