--- a/assignment01.html
+++ b/assignment01.html
@@ -56,12 +56,20 @@
     <h3>Learn to invest like Howard Hughes!</h3>
 
     <p>click<a href="#descr_list"> here </a>to skip directly to description list using a fragment identifier</p>
-    <!-- <a href="#descr_list">click here to skip ahead</a> -->
+
     <p>Dogesplorer is the #1 site in the World for exploring the Doge blockchain! 
+
       <br>Just enter a wallet address, a transaction hash, or a 
       block address to see the details!</p>
+
     <p>Here is a different site that actually works: 
       <a href="https://dogechain.info/">#2 Doge Explorer in the World</a></p>
+    
+
+    <h1>DOGE ENERGY RN!!!!</h1>
+    <iframe src="https://archive.org/embed/koto-jabdah-live-perfromance" width="560" height="315" frameborder="0" webkitallowfullscreen="true" 
+    mozallowfullscreen="true" allowfullscreen></iframe>
+
 
     <h2>Ordered List</h2>
     <ol>
