--- a/assignment01.html
+++ b/assignment01.html
@@ -83,12 +83,12 @@
 
     <h2>Unordered List</h2>
     <ul>
-      <li>block04</li>
-      <li>block00</li>
-      <li>block01</li>
-      <li>block05</li>
-      <li>block03</li>
-      <li>block02</li>
+      <li>wallet04</li>
+      <li>wallet00</li>
+      <li>wallet01</li>
+      <li>wallet05</li>
+      <li>wallet03</li>
+      <li>wallet02</li>
     </ul>
 
     <h2 id="descr_list">Data Definition List or Description List</h2>
