--- a/assignment01.html
+++ b/assignment01.html
@@ -17,11 +17,11 @@
     absolute path,                        √
     fragment identifier,                  √
     image,                                √
-    video, 
-    width, 
-    height, 
+    video,                                √
+    width,                                √
+    height,                               √
     alt,                                  √
-    table, 
+    table,                                
     row, 
     data cell, 
     border, 
@@ -52,6 +52,8 @@
     <!--img with relative and absolute paths-->
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcThSTQoc3lNEA
     PGnErDlKqQhQl8YRoG2ueX1g&usqp=CAU" alt="Photo of the great Howard Hughes!">
+    <br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <img src="./img001.jpg" alt="Another photo of the great Howard Hughes!">
     <h3>Learn to invest like Howard Hughes!</h3>
 
