--- a/assignment01.html
+++ b/assignment01.html
@@ -66,7 +66,7 @@
     <img src="./img001.jpg" alt="Another photo of the great Howard Hughes!">
     <h3>Learn to invest like Howard Hughes!</h3>
 
-    <p>click<a href="#descr_list"> here </a>to skip directly to description list using a fragment identifier</p>
+    <p>click<a href="#currency_list"> here </a>to skip directly to description list using a fragment identifier</p>
 
     <p>Dogesplorer is the #1 site in the World for exploring the Doge blockchain! 
 
@@ -132,7 +132,7 @@
       <li>wallet02</li>
     </ul>
 
-    <h2 id="descr_list">Data Definition List or Description List</h2>
+    <h2 id="currency_list">Data Definition List or Description List</h2>
     <dl>
       <dt>Dogecoin</dt>
       <dd>The very finest and most decentralized cryptocurrency of them all</dd>
