added text file input iframe

--- a/assignment01.html
+++ b/assignment01.html
@@ -45,6 +45,7 @@
     <title>Dogesplorer</title>
   </head>
   <style>
+    /* got style reccomendation from AI, then confirmed on stackoverflow */
   table, th, td {
     margin: 50px;
     border: 2px solid black; 
@@ -56,13 +57,17 @@
   <body>
     <h1>Dogesplorer</h1>
     <h2>Dogecoin Address Explorer</h2>
-    <!-- <h2id="descr">Dogecoin Address Explorer</h2id> -->
-    <br>
+    <table>
+      <caption>Enter a wallet address, transaction hash, or block address to search</caption>
+      <tr>
+        <th>Search</th>
+        <td>_______________search_field_element_______________</td>
+      </tr>
+    </table>
     <!--img with relative and absolute paths-->
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcThSTQoc3lNEA
     PGnErDlKqQhQl8YRoG2ueX1g&usqp=CAU" alt="Photo of the great Howard Hughes!">
-    <br>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
     <img src="./img001.jpg" alt="Another photo of the great Howard Hughes!">
     <h3>Learn to invest like Howard Hughes!</h3>
 
@@ -78,7 +83,7 @@
     
 
     <h1>DOGE ENERGY RN!!!! (NEWS)</h1>
-    <iframe src="https://archive.org/embed/koto-jabdah-live-perfromance" width="560" height="315" frameborder="0" webkitallowfullscreen="true" 
+    <iframe src="https://archive.org/embed/koto-jabdah-live-perfromance" width="640" height="480" frameborder="0" webkitallowfullscreen="true" 
     mozallowfullscreen="true" allowfullscreen></iframe>
     <br>
     <br>
@@ -144,8 +149,11 @@
       <dd>Man, that stuff is HEAVY!</dd>
     </dl>
 
-    <h1>THE FOLLOWING TEXT IS LOREM IPSUM, NO MORE!(generated using the site: https://www.lipsum.com/</h1>
+    <h1>The following text is gobbledygook for added length in testing<br>
+      (generated using the site: https://www.lipsum.com/)</h1>
     <p lang= "la">
+      <iframe src="./text0001.txt"></iframe>
+      <br>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rhoncus porttitor justo at fermentum. <br>
       Vestibulum sodales felis et est commodo, non convallis tellus tincidunt. Sed tincidunt commodo ultricies. <br>
       In posuere mauris sodales elit laoreet dictum. Integer orci dolor, aliquam porttitor dui nec, sagittis <br>
@@ -189,6 +197,10 @@
       Donec ultrices pellentesque metus quis interdum. Ut dapibus a purus vitae lacinia. Donec vel arcu nec <br>
       nulla placerat placerat. 
     </p>
+
+    <h4>Was having fun, listening to music while playing with settings</h4>
+    <iframe src="https://archive.org/embed/KOTO_Visitors" width="640" height="480" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
+    <iframe src="https://archive.org/embed/Baltimora_Woody_Boogie" width="640" height="480" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
 
 
   </body>
