--- a/assignment01.html
+++ b/assignment01.html
@@ -61,7 +61,8 @@
       <caption>Enter a wallet address, transaction hash, or block address to search</caption>
       <tr>
         <th>Search</th>
-        <td>_______________search_field_element_______________</td>
+        <td><textarea rows="1" cols="100"> -type search stuff here- </textarea>_______________search_field_element_______________</td>
+        <td>search_button_element</td>
       </tr>
     </table>
     <!--img with relative and absolute paths-->
@@ -153,6 +154,7 @@
       (generated using the site: https://www.lipsum.com/)</h1>
     <p lang= "la">
       <iframe src="./text0001.txt"></iframe>
+      <!-- <textarea></textarea> -->
       <br>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rhoncus porttitor justo at fermentum. <br>
       Vestibulum sodales felis et est commodo, non convallis tellus tincidunt. Sed tincidunt commodo ultricies. <br>
@@ -199,9 +201,12 @@
     </p>
 
     <h4>Was having fun, listening to music while playing with settings</h4>
-    <iframe src="https://archive.org/embed/KOTO_Visitors" width="640" height="480" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
-    <iframe src="https://archive.org/embed/Baltimora_Woody_Boogie" width="640" height="480" frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
-
+    <iframe src="https://archive.org/embed/KOTO_Visitors" width="640" height="480" 
+    frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
+    <iframe src="https://archive.org/embed/Baltimora_Woody_Boogie" width="640" height="480" 
+    frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/FWzrcb8qZg8?si=QIuQeIx0mpMKgThZ" width="640" height="480"
+    frameborder="0" allowfullscreen></iframe>
 
   </body>
 </html>
