--- a/assignment01.html
+++ b/assignment01.html
@@ -60,7 +60,7 @@
     <table>
       <caption>Enter a wallet address, transaction hash, or block address to search</caption>
       <tr>
-        <th>Search</th>
+        <th><img src="./doge_logo.jpg" height="50" width="50"></th>
         <td><textarea rows="1" cols="100"> -type search stuff here- </textarea>_______________search_field_element_______________</td>
         <td>search_button_element</td>
       </tr>
