--- a/assignment01.html
+++ b/assignment01.html
@@ -47,7 +47,7 @@
   <style>
     /* got style reccomendation from AI, then confirmed on stackoverflow */
   table, th, td {
-    margin: 50px;
+    margin: 10px;
     border: 2px solid black; 
     padding: 25px;
     text-align: center;
@@ -70,15 +70,43 @@
     PGnErDlKqQhQl8YRoG2ueX1g&usqp=CAU" alt="Photo of the great Howard Hughes!">
 
     <img src="./img001.jpg" alt="Another photo of the great Howard Hughes!">
+    &nbsp;
+    <table>
+      <caption>Live Updates</caption>
+      <thead>
+        <tr>
+          <th>Dogecoin Price</th>
+          <th>Most Recent Block</th>
+          <th>Number of Blocks</th>
+        </tr>
+      </thead>
+      <tbody>
+      <!-- <col span="4" class="img"> -->
+      <tr>
+        <td>doge_price_element</td>
+        <td>last_block_element</td>
+        <td>total_blocks_element</td>
+      </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <td colspan="3">Current Difficulty</td>
+        </tr>
+        <tr>
+          <td colspan="3">current_diff_element</td>
+        </tr>
+      </tfoot>
+
+    </table>
+
+
+
+
     <h3>Learn to invest like Howard Hughes!</h3>
-
     <p>click<a href="#currency_list"> here </a>to skip directly to description list using a fragment identifier</p>
-
     <p>Dogesplorer is the #1 site in the World for exploring the Doge blockchain! 
-
       <br>Just enter a wallet address, a transaction hash, or a 
       block address to see the details!</p>
-
     <p>Here is a different site that actually works: 
       <a href="https://dogechain.info/">#2 Doge Explorer in the World</a></p>
     
@@ -90,7 +118,7 @@
     <br>
 
 
-    <table>
+    <!-- <table>
       <caption>Live Updates</caption>
       <thead>
         <tr>
@@ -115,7 +143,7 @@
         </tr>
       </tfoot>
 
-    </table>
+    </table> -->
 
 
     <h2>Ordered List</h2>
