--- a/assignment01.html
+++ b/assignment01.html
@@ -57,6 +57,7 @@
   <body>
     <h1>Dogesplorer</h1>
     <h2>Dogecoin Address Explorer</h2>
+    <!-- search "function" is in a table -->
     <table>
       <caption>Enter a wallet address, transaction hash, or block address to search</caption>
       <tr>
@@ -66,11 +67,11 @@
       </tr>
     </table>
     <!--img with relative and absolute paths-->
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcThSTQoc3lNEA
-    PGnErDlKqQhQl8YRoG2ueX1g&usqp=CAU" alt="Photo of the great Howard Hughes!">
+    <iframe width="19%" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcThSTQoc3lNEAPGnErDlKqQhQl8YRoG2ueX1g&usqp=CAU" alt="Photo of the great Howard Hughes!"></iframe>
+    <iframe width="7.36%" src="./img001.jpg" alt="Another photo of the great Howard Hughes!"></iframe>
+    <h3>Learn to invest like Howard Hughes!</h3>
 
-    <img src="./img001.jpg" alt="Another photo of the great Howard Hughes!">
-    &nbsp;
+    <!-- news update table -->
     <table>
       <caption>Live Updates</caption>
       <thead>
@@ -81,7 +82,6 @@
         </tr>
       </thead>
       <tbody>
-      <!-- <col span="4" class="img"> -->
       <tr>
         <td>doge_price_element</td>
         <td>last_block_element</td>
@@ -96,13 +96,8 @@
           <td colspan="3">current_diff_element</td>
         </tr>
       </tfoot>
-
     </table>
 
-
-
-
-    <h3>Learn to invest like Howard Hughes!</h3>
     <p>click<a href="#currency_list"> here </a>to skip directly to description list using a fragment identifier</p>
     <p>Dogesplorer is the #1 site in the World for exploring the Doge blockchain! 
       <br>Just enter a wallet address, a transaction hash, or a 
