--- a/assignment01.html
+++ b/assignment01.html
@@ -34,6 +34,7 @@
 
 <!DOCTYPE html>
 <html lang="en-US">
+
   <head>
     <meta charset="UTF-8">
     <meta name="description" content="Dickie's Assignment 1">
@@ -44,6 +45,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dogesplorer</title>
   </head>
+
   <style>
     /* got style reccomendation from AI, then confirmed on stackoverflow */
   table, th, td {
@@ -54,6 +56,7 @@
     border-collapse: collapse;
   }
   </style>
+
   <body>
     <h1>Dogesplorer</h1>
     <h2>Dogecoin Address Explorer</h2>
@@ -72,6 +75,7 @@
     <h3>Learn to invest like Howard Hughes!</h3>
 
     <!-- news update table -->
+    <!-- I want this table to be displayed next to the images, not underneath -->
     <table>
       <caption>Live Updates</caption>
       <thead>
@@ -104,42 +108,12 @@
       block address to see the details!</p>
     <p>Here is a different site that actually works: 
       <a href="https://dogechain.info/">#2 Doge Explorer in the World</a></p>
-    
 
     <h1>DOGE ENERGY RN!!!! (NEWS)</h1>
     <iframe src="https://archive.org/embed/koto-jabdah-live-perfromance" width="640" height="480" frameborder="0" webkitallowfullscreen="true" 
     mozallowfullscreen="true" allowfullscreen></iframe>
     <br>
     <br>
-
-
-    <!-- <table>
-      <caption>Live Updates</caption>
-      <thead>
-        <tr>
-          <th>Dogecoin Price</th>
-          <th>Most Recent Block</th>
-          <th>Number of Blocks</th>
-        </tr>
-      </thead>
-      <tbody>
-      <tr>
-        <td>doge_price_element</td>
-        <td>last_block_element</td>
-        <td>total_blocks_element</td>
-      </tr>
-      </tbody>
-      <tfoot>
-        <tr>
-          <td colspan="3">Current Difficulty</td>
-        </tr>
-        <tr>
-          <td colspan="3">current_diff_element</td>
-        </tr>
-      </tfoot>
-
-    </table> -->
-
 
     <h2>Ordered List</h2>
     <ol>
@@ -163,12 +137,19 @@
 
     <h2 id="currency_list">Data Definition List or Description List</h2>
     <dl>
+      <dh>Why Dogecoin is better:</dh>
+      <br>
+      <br>
+      <dt>Affordable!</dt>
+      <dd>Nearly free to send and receive</dd>
+      <dt>Fast!</dt>
+      <dd>Instant trades!</dd>
+      <dt>Cute!</dt>
+      <dd>Would you just look at 'em?</dd>
       <dt>Dogecoin</dt>
       <dd>The very finest and most decentralized cryptocurrency of them all</dd>
-
       <dt>Pitiful USD</dt>
       <dd>Worthless paper with an out of control inflation rate</dd>
-
       <dt>Gold/Silver</dt>
       <dd>Man, that stuff is HEAVY!</dd>
     </dl>
