--- a/assignment01.html
+++ b/assignment01.html
@@ -55,15 +55,15 @@
   }
   </style>
   <body>
-    <h1>Dogesplorer</h1>
-    <h2>Dogecoin Address Explorer</h2>
+    <h1 style="text-align: center;">Dogesplorer</h1>
+    <h2 style="text-align: center;">Dogecoin Address Explorer</h2>
     <!-- search "function" is in a table -->
     <table>
-      <caption>Enter a wallet address, transaction hash, or block address to search</caption>
+      <caption style="text-align: center;">Enter a wallet address, transaction hash, or block address to search</caption>
       <tr>
         <!-- img with relative path -->
         <th><img src="./doge_logo.jpg" height="50" width="50"></th>
-        <td><textarea rows="1" cols="100"> -type search stuff here- </textarea></td>
+        <td><textarea rows="1" cols="150"> -type search stuff here- </textarea></td>
         <td>search_button_element</td>
       </tr>
     </table>
