--- a/table001.html
+++ b/table001.html
@@ -36,7 +36,7 @@
     </tbody>
     <tfoot>
       <tr>
-        <td colspan="3">Current Difficulty</td>
+        <th colspan="3">Current Difficulty</th>
       </tr>
       <tr>
         <td colspan="3">current_diff_element</td>
