--- a/assignment01.html
+++ b/assignment01.html
@@ -130,7 +130,6 @@
       (generated using the site: https://www.lipsum.com/)</h1>
     <p lang= "la">
       <iframe src="./text0001.txt"></iframe>
-      <!-- <textarea></textarea> -->
       <br>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rhoncus porttitor justo at fermentum. <br>
       Vestibulum sodales felis et est commodo, non convallis tellus tincidunt. Sed tincidunt commodo ultricies. <br>
@@ -183,6 +182,8 @@
     frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
     <iframe src="https://www.youtube.com/embed/FWzrcb8qZg8?si=QIuQeIx0mpMKgThZ" width="640" height="480"
     frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://archive.org/embed/Baltimora-Tarzan_Boy" width="640" height="480"
+    frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
 
   </body>
 </html>
