added moar video

--- a/assignment01.html
+++ b/assignment01.html
@@ -175,15 +175,18 @@
       nulla placerat placerat. 
     </p>
 
-    <h4>Was having fun, listening to music while playing with settings</h4>
-    <iframe src="https://archive.org/embed/KOTO_Visitors" width="640" height="480" 
+    <h2>Was having fun, listening to music while playing with settings</h2>
+    <iframe src="https://archive.org/embed/KOTO_Visitors" width="640" height="360" 
     frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
-    <iframe src="https://archive.org/embed/Baltimora_Woody_Boogie" width="640" height="480" 
-    frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
-    <iframe src="https://www.youtube.com/embed/FWzrcb8qZg8?si=QIuQeIx0mpMKgThZ" width="640" height="480"
+    <iframe src="https://www.youtube.com/embed/FWzrcb8qZg8?si=QIuQeIx0mpMKgThZ" width="640" height="360"
     frameborder="0" allowfullscreen></iframe>
-    <iframe src="https://archive.org/embed/Baltimora-Tarzan_Boy" width="640" height="480"
+    <iframe src="https://archive.org/embed/Baltimora_Woody_Boogie" width="640" height="360" 
     frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
-
+    <iframe src="https://archive.org/embed/Baltimora-Tarzan_Boy" width="640" height="360"
+    frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/Gq_7F6bXISQ?si=d47jfz_nrxiiV8tk" width="640" height="360" title="Kyu Sakamoto 'Let's Make It Happen'" 
+    frameborder="0" mozallowfullscreen="true" allowfullscreen></iframe>
+    <iframe width="640" height="360" src="https://www.youtube.com/embed/ktOdCe-UEmM?si=vQaMDpmw4uST-VzQ" title="YouTube video player" 
+    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </body>
 </html>
