--- a/assignment01.html
+++ b/assignment01.html
@@ -46,7 +46,7 @@
     <title>Dogesplorer</title>
   </head>
   <style>
-    /* got style reccomendation from AI, then confirmed on stackoverflow */
+    /* got style reccomendation on stackoverflow */
   table, th, td {
     margin: 10px;
     padding: 25px;
