--- a/assignment01.html
+++ b/assignment01.html
@@ -40,7 +40,9 @@
     <meta name="description" content="Dickie's Assignment 1">
     <meta name="keywords" content="doge, crypto, cryptocoin, cryptocurrency, 
     blockchain, block, wallet, address, addres, adress, explorer, explore, 
-    search">
+    search, dogecoin, coin, dog, dogcoin, shiba, inu, shib, sheeb, cheems, bonk,
+    litecoin, ltc, trade, trades, trading, hash, transaction, bork, much, money,
+    such, currency">
     <meta name="author" content="Dickie">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dogesplorer</title>
