--- a/table001.html
+++ b/table001.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <style>
-    /* got style reccomendation from AI, then confirmed on stackoverflow */
+    /* got style reccomendation on stackoverflow */
   table, th, td {
     margin: 10px;
     border: 2px solid black; 
