Updated with comments

--- a/assignment01.html
+++ b/assignment01.html
@@ -1,7 +1,8 @@
+<!-- doctype, html, head, lang -->
 <!DOCTYPE html>
 <html lang="en-US">
-
   <head>
+    <!-- meta -->
     <meta charset="UTF-8">
     <meta name="description" content="Dickie's Assignment 1">
     <meta name="keywords" content="doge, crypto, cryptocoin, cryptocurrency, 
@@ -11,6 +12,7 @@
     such, currency">
     <meta name="author" content="Dickie">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- title -->
     <title>Dogesplorer</title>
   </head>
   <style>
@@ -23,25 +25,32 @@
   }
   </style>
   <body>
+    <!-- headers 1 & 2 -->
     <h1 style="text-align: center;">Dogesplorer</h1>
     <h2 style="text-align: center;">Dogecoin Address Explorer</h2>
-    <!-- search "function" is in a table -->
+    <!-- table, th, tr, td -->
     <table>
-      <caption style="text-align: center;">Enter a wallet address, transaction hash, or block address to search</caption>
+      <caption style="text-align: center;">Enter a wallet address, 
+        transaction hash, or block address to search</caption>
       <tr>
-        <!-- img with relative path -->
+        <!-- image, relative path -->
         <th><img src="./doge_logo.jpg" height="50" width="50"></th>
         <td><textarea rows="1" cols="150"> -type search stuff here- </textarea></td>
         <td>search_button_element</td>
       </tr>
     </table>
-    <!--img with absolute path-->
-    <iframe width="19%" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcThSTQoc3lNEAPGnErDlKqQhQl8YRoG2ueX1g&usqp=CAU" alt="Photo of the great Howard Hughes!"></iframe>
-    <iframe width="7.36%" src="./img001.jpg" alt="Another photo of the great Howard Hughes!"></iframe>
-    <iframe width="35%" height="320" src="./table001.html" alt="Price/Block ticker"></iframe>
-
+    <!-- absolute path, alt, width, height -->
+    <iframe width="19%" 
+    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcThSTQoc3lNEAPGnErDlKqQhQl8YRoG2ueX1g&usqp=CAU" 
+    alt="Photo of the great Howard Hughes!"></iframe>
+    <iframe width="7.36%" src="./img001.jpg" 
+    alt="Another photo of the great Howard Hughes!"></iframe>
+    <iframe width="35%" height="320" src="./table001.html" 
+    alt="Price/Block ticker"></iframe>
+    <!-- header 3 -->
     <h3>Learn to invest like Howard Hughes!</h3>
-    <!-- anchor here -->
+
+    <!-- anchor, fragment identifier, paragraph, line break -->
     <p>click<a href="#currency_list"> here </a>to skip directly to description list using a fragment identifier</p>
     <p>Dogesplorer is the #1 site in the World for exploring the Doge blockchain! 
       <br>Just enter a wallet address, a transaction hash, or a 
@@ -50,11 +59,13 @@
       <a href="https://dogechain.info/">#2 Doge Explorer in the World</a></p>
 
     <h1>DOGE ENERGY RN!!!! (NEWS)</h1>
+    <!-- video, width, height -->
     <iframe src="https://archive.org/embed/koto-jabdah-live-perfromance" width="640" height="480" frameborder="0" webkitallowfullscreen="true" 
     mozallowfullscreen="true" allowfullscreen></iframe>
     <br>
     <br>
 
+    <!-- ordered list -->
     <h2>Ordered List</h2>
     <ol>
       <li>block00</li>
@@ -64,7 +75,7 @@
       <li>block04</li>
       <li>block05</li>
     </ol>
-
+    <!-- unordered list -->
     <h2>Unordered List</h2>
     <ul>
       <li>wallet04</li>
@@ -75,6 +86,7 @@
       <li>wallet02</li>
     </ul>
 
+    <!-- data definition list with fragment anchor -->
     <h2 id="currency_list">Data Definition List or Description List</h2>
     <dl>
       <dh>Why Dogecoin is better:</dh>
@@ -94,6 +106,7 @@
       <dd>Man, that stuff is HEAVY!</dd>
     </dl>
 
+    <!-- please ignore as best you can, I was playing with settings to learn how things work -->
     <h1>The following text is gobbledygook for added length in testing<br>
       (generated using the site: https://www.lipsum.com/)</h1>
     <p lang= "la">
@@ -143,6 +156,7 @@
       nulla placerat placerat. 
     </p>
 
+    <!-- This was my playlist for codin' -->
     <h2>Was having fun, listening to music while playing with settings</h2>
     <iframe src="https://archive.org/embed/KOTO_Visitors" width="640" height="360" 
     frameborder="0" webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen></iframe>
