--- a/table001.html
+++ b/table001.html
@@ -9,6 +9,7 @@
     /* got style reccomendation on stackoverflow */
   table, th, td {
     margin: 10px;
+    /* border */
     border: 2px solid black; 
     padding: 25px;
     text-align: center;
@@ -19,7 +20,9 @@
 
   <body>
   <table>
+    <!-- caption -->
     <caption>Live Updates</caption>
+    <!-- header -->
     <thead>
       <tr>
         <th>Dogecoin Price</th>
@@ -27,6 +30,7 @@
         <th>Number of Blocks</th>
       </tr>
     </thead>
+    <!-- body -->
     <tbody>
     <tr>
       <td>doge_price_element</td>
@@ -34,8 +38,10 @@
       <td>total_blocks_element</td>
     </tr>
     </tbody>
+    <!-- footer -->
     <tfoot>
       <tr>
+        <!-- spanning columns -->
         <th colspan="3">Current Difficulty</th>
       </tr>
       <tr>
