--- a/assignment01.html
+++ b/assignment01.html
@@ -23,6 +23,7 @@
     text-align: center;
     border-collapse: collapse;
   }
+  /* change made */
   </style>
   <body>
     <!-- headers 1 & 2 -->
